--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,9 @@ deploy:
 - provider: GitHub
   auth_token:
     secure: F8cldz47mQ0lW3O9uCEneU5LRklWcKw8JbPuh5BDYA2TfyeqC//GO8vl8/wmBy3Z
-  artifact: '*.7z'
+  artifact: /.*\.7z/
   release: $(appveyor_repo_tag_name)
+  description: 'Release description'
+  force_update: true
   on:
     appveyor_repo_tag: true
