--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -367,9 +367,9 @@ Library
      ToySolver.SMT
      ToySolver.Text.CNF
      ToySolver.Text.GCNF
-     ToySolver.Text.MaxSAT
      ToySolver.Text.QDimacs
      ToySolver.Text.SDPFile
+     ToySolver.Text.WCNF
      ToySolver.Internal.Data.IndexedPriorityQueue
      ToySolver.Internal.Data.IOURef
      ToySolver.Internal.Data.PriorityQueue
