--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -541,10 +541,12 @@ Executable toyconvert
   HS-Source-Dirs: app
   Build-Depends:
     base,
+    ansi-wl-pprint,
     bytestring,
     bytestring-builder,
     data-default-class,
     filepath,
+    optparse-applicative,
     pseudo-boolean,
     scientific,
     text,
