toyqbf: switch from System.Console.GetOpt to optparse-applicative

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -492,6 +492,7 @@ Executable toyqbf
     base,
     containers,
     data-default-class,
+    optparse-applicative,
     toysolver
   Default-Language: Haskell2010
   Other-Extensions: ScopedTypeVariables, CPP
