--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -516,6 +516,7 @@ Executable toyfmf
       -- logic-TPTP <=0.4.3 has build error on ghc <7.9 and transformers >=0.5.1.
       -- https://github.com/DanielSchuessler/logic-TPTP/pull/4
       logic-TPTP >=0.4.4.0,
+      optparse-applicative,
       text,
       toysolver
     -- logic-TPTP <=0.4.4.0 is not compatible with transformers-compat >=0.5
