toysolver: switch from System.Console.GetOpt to optparse-applicative

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -403,6 +403,7 @@ Executable toysolver
     data-default-class,
     filepath,
     OptDir,
+    optparse-applicative,
     pseudo-boolean,
     scientific,
     toysolver
