--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -432,6 +432,7 @@ Executable toysat
     filepath,
     megaparsec,
     mwc-random,
+    optparse-applicative,
     process >=1.1.0.2,
     pseudo-boolean,
     scientific,
