toyconvert: remove negation from linear terms in OPB/WBO files where possible

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -282,6 +282,7 @@ Library
      ToySolver.Converter.MaxSAT2WBO
      ToySolver.Converter.PB2IP
      ToySolver.Converter.PBLinearization
+     ToySolver.Converter.PBNormalization
      ToySolver.Converter.PB2LSP
      ToySolver.Converter.PB2SAT
      ToySolver.Converter.PB2WBO
