--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -181,6 +181,7 @@ Library
      OptDir,
      lattices,
      megaparsec >=4 && <7,
+     optparse-applicative,
      prettyclass >=1.0.0,
      primes,
      primitive >=0.6,
