--- a/stack-travis-ghc-8.2.yaml
+++ b/stack-travis-ghc-8.2.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2017-09-17
+resolver: lts-10.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -47,7 +47,6 @@ packages:
 extra-deps:
 - intern-0.9.1.4
 - queue-0.1.2
-- log-domain-0.11.2
 - logic-TPTP-0.4.5.0
 - OptDir-0.0.3
 - data-interval-1.3.0
