--- a/stack-travis-ghc-7.8.yaml
+++ b/stack-travis-ghc-7.8.yaml
@@ -71,9 +71,10 @@ extra-deps:
 - mtl-2.2.1
 - multiset-0.3.3
 - primitive-0.6.1.0
-- semigroupoids-5.0.1
+- semigroupoids-5
 - semigroups-0.18.2
 - streaming-commons-0.1.18
+- tagged-0.8.4
 - tasty-th-0.1.4
 - time-1.5.0.1
 - transformers-0.4.3.0
