stack: use hackage version of OpenCL instead of custom version

--- a/stack.yaml
+++ b/stack.yaml
@@ -37,10 +37,10 @@ resolver: lts-10.4
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
-- location:
-    git: https://github.com/msakai/opencl.git
-    commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
-  extra-dep: true
+#- location:
+#    git: https://github.com/msakai/opencl.git
+#    commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
+#  extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -53,6 +53,7 @@ extra-deps:
 - finite-field-0.9.0
 - pseudo-boolean-0.1.6.0
 - sign-0.4.3
+- OpenCL-1.0.3.4
 
 # hack for avoiding haddock error of MemoTrie-0.6.4
 #- MemoTrie-0.6.7
