--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -363,7 +363,6 @@ Library
      ToySolver.QBF
      ToySolver.QUBO
      ToySolver.SAT
-     ToySolver.SAT.Config
      ToySolver.SAT.Encoder.Integer
      ToySolver.SAT.Encoder.PB
      ToySolver.SAT.Encoder.PB.Internal.Adder
@@ -388,6 +387,8 @@ Library
      ToySolver.SAT.PBO.MSU4
      ToySolver.SAT.PBO.UnsatBased
      ToySolver.SAT.SLS.ProbSAT
+     ToySolver.SAT.Solver.CDCL
+     ToySolver.SAT.Solver.CDCL.Config
      ToySolver.SAT.Store.CNF
      ToySolver.SAT.Store.PB
      ToySolver.SAT.TheorySolver
