--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -291,6 +291,7 @@ Library
      ToySolver.Converter.PBSetObj
      ToySolver.Converter.PB2SMP
      ToySolver.Converter.SAT2KSAT
+     ToySolver.Converter.SAT2MaxCut
      ToySolver.Converter.SAT2PB
      ToySolver.Converter.SAT2IP
      ToySolver.Converter.WBO2MaxSAT
