--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -295,6 +295,7 @@ Library
      ToySolver.Converter.SAT2MaxCut
      ToySolver.Converter.SAT2PB
      ToySolver.Converter.SAT2IP
+     ToySolver.Converter.Tseitin
      ToySolver.Converter.WBO2MaxSAT
      ToySolver.Converter.WBO2PB
      ToySolver.Data.AlgebraicNumber.Complex
