stack: update to lts-12.1

--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.1
+resolver: lts-12.1
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -45,6 +45,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
+- multiset-0.3.4
 - queue-0.1.2
 - OptDir-0.0.3
 - logic-TPTP-0.4.5.0
