--- a/.travis.yml
+++ b/.travis.yml
@@ -28,18 +28,18 @@ addons:
 
 matrix:
   include:
-    - env: STACK_YAML=stack-travis-ghc-8.4.yaml GHCVER=8.4.3 FLAGS="--haddock --no-haddock-deps --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve --flag=toysolver:OpenCL" RELEASE=1
+    - env: STACK_YAML=stack-travis-ghc-8.4.yaml GHCVER=8.4.3 RELEASE=1 HADDOCK=1
       compiler: ": #GHC 8.4.3"
-    - env: STACK_YAML=stack-travis-ghc-8.4.yaml GHCVER=8.4.3 FLAGS="--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag=toysolver:OpenCL"
+    - env: STACK_YAML=stack-travis-ghc-8.4.yaml GHCVER=8.4.3 RELEASE=1
       compiler: ": #GHC 8.4.3"
       os: osx
-    - env: STACK_YAML=stack-travis-ghc-8.2.yaml GHCVER=8.2.1 FLAGS="--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve --flag=toysolver:OpenCL" RELEASE=1
+    - env: STACK_YAML=stack-travis-ghc-8.2.yaml GHCVER=8.2.1
       compiler: ": #GHC 8.2.1"
-    - env: STACK_YAML=stack-travis-ghc-8.0.yaml GHCVER=8.0.1 FLAGS="--coverage --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve --flag=toysolver:OpenCL" COVERAGE=1
+    - env: STACK_YAML=stack-travis-ghc-8.0.yaml GHCVER=8.0.1 COVERAGE=1
       compiler: ": #GHC 8.0.2"
-    - env: STACK_YAML=stack-travis-ghc-7.10.yaml GHCVER=7.10.3 FLAGS="--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve --flag=toysolver:OpenCL"
+    - env: STACK_YAML=stack-travis-ghc-7.10.yaml GHCVER=7.10.3
       compiler: ": #GHC 7.10.3"
-    - env: STACK_YAML=stack-travis-ghc-7.8.yaml GHCVER=7.8.4 FLAGS="--flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve --flag=toysolver:OpenCL"
+    - env: STACK_YAML=stack-travis-ghc-7.8.yaml GHCVER=7.8.4
       compiler: ": #GHC 7.8.4"
 
 # Caching so the next build will be fast too.
@@ -52,13 +52,19 @@ before_install:
 - mkdir -p ~/.local/bin
 - export PATH=$HOME/.local/bin:$PATH
 - |
-  if [ `uname` = "Darwin" ]; then
+  if [ "$TRAVIS_OS_NAME" = "osx" ]; then
     travis_retry curl -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 -C ~/.local/bin '*/stack'
   else
     travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   fi  
 
 install:
+- FLAGS="--flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag=toysolver:OpenCL"
+- if [ -n "$COVERAGE" ]; then FLAGS="$FLAGS --coverage"; fi
+- if [ -n "$HADDOCK" ]; then FLAGS="$FLAGS --haddock --no-haddock-deps"; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then FLAGS="$FLAGS --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve"; fi
+- if [ ! $GHCVER = 7.8.4 ]; then FLAGS="$FLAGS --flag toysolver:BuildToyFMF"; fi
+
 # Build dependencies
 - stack --jobs 2 --no-terminal --install-ghc build --test --bench --only-dependencies $FLAGS
 
@@ -67,8 +73,11 @@ script:
 - stack --jobs 2 --no-terminal test --bench --no-run-benchmarks $FLAGS
 
 after_script:
-- "[ -n \"$COVERAGE\" ] && travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj"
-- "[ -n \"$COVERAGE\" ] && ./shc toysolver TestSuite TestPolynomial"
+- |
+  if [ -n "$COVERAGE" ]; then
+    travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj
+    ./shc toysolver TestSuite TestPolynomial
+  fi
 
 before_deploy:
 - stack runghc --package turtle misc/build_artifacts.hs
