--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,14 @@ addons:
 
 matrix:
   include:
-    - env: STACK_YAML=stack-travis-ghc-8.4.yaml RELEASE=1 HADDOCK=1
+    - env: STACK_YAML=stack-travis-ghc-8.4.yaml RELEASE=1 HADDOCK=1 COVERAGE=1 SHC_GHCVER=8.0.1
       compiler: ": #GHC 8.4.3"
     - env: STACK_YAML=stack-travis-ghc-8.4.yaml RELEASE=1
       compiler: ": #GHC 8.4.3"
       os: osx
     - env: STACK_YAML=stack-travis-ghc-8.2.yaml
       compiler: ": #GHC 8.2.1"
-    - env: STACK_YAML=stack-travis-ghc-8.0.yaml COVERAGE=1 SHC_GHCVER=8.0.1
+    - env: STACK_YAML=stack-travis-ghc-8.0.yaml
       compiler: ": #GHC 8.0.2"
     - env: STACK_YAML=stack-travis-ghc-7.10.yaml
       compiler: ": #GHC 7.10.3"
