use ToySolver.FileFormat to write OPB/WBO files

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -801,6 +801,7 @@ Executable pigeonhole
   HS-Source-Dirs: app
   Build-Depends:
     base,
+    bytestring,
     containers,
     pseudo-boolean,
     toysolver
