--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -163,6 +163,7 @@ Library
      base >=4.7 && <5,
      bytestring >=0.9.2.1 && <0.11,
      bytestring-builder,
+     bytestring-encoding,
      case-insensitive,
      clock >=0.7.1,
      -- IntMap.mergeWithKey and IntMap.toDescList require containers >=0.5.0
