--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -299,6 +299,7 @@ Library
      ToySolver.Converter.PB2SMP
      ToySolver.Converter.SAT2KSAT
      ToySolver.Converter.SAT2MaxCut
+     ToySolver.Converter.SAT2MaxSAT
      ToySolver.Converter.Tseitin
      ToySolver.Data.AlgebraicNumber.Complex
      ToySolver.Data.AlgebraicNumber.Real
