--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -297,6 +297,7 @@ Library
      ToySolver.Converter.PB2LSP
      ToySolver.Converter.PBSetObj
      ToySolver.Converter.PB2SMP
+     ToySolver.Converter.QBF2IPC
      ToySolver.Converter.SAT2KSAT
      ToySolver.Converter.SAT2MaxCut
      ToySolver.Converter.SAT2MaxSAT
