--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -917,6 +917,7 @@ Test-suite TestSuite
     Test.MPSFile
     Test.ProbSAT
     Test.QBF
+    Test.QUBO
     Test.SAT
     Test.SDPFile
     Test.Simplex
