:green_heart: separate utilities from Test.SAT to Test.SAT.Utils

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -921,6 +921,7 @@ Test-suite TestSuite
     Test.QBF
     Test.QUBO
     Test.SAT
+    Test.SAT.Utils
     Test.SDPFile
     Test.Simplex
     Test.SimplexTextbook
