--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -921,6 +921,7 @@ Test-suite TestSuite
     Test.QBF
     Test.QUBO
     Test.SAT
+    Test.SAT.ExistentialQuantification
     Test.SAT.Utils
     Test.SDPFile
     Test.Simplex
