--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -922,6 +922,7 @@ Test-suite TestSuite
     Test.QUBO
     Test.SAT
     Test.SAT.ExistentialQuantification
+    Test.SAT.TheorySolver
     Test.SAT.Utils
     Test.SDPFile
     Test.Simplex
