:green_heart: separate Test.SAT.Encoder

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -922,6 +922,7 @@ Test-suite TestSuite
     Test.QBF
     Test.QUBO
     Test.SAT
+    Test.SAT.Encoder
     Test.SAT.ExistentialQuantification
     Test.SAT.TheorySolver
     Test.SAT.Utils
