:green_heart: separate Test.SAT.Types and Test.SAT.MUS

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -924,7 +924,9 @@ Test-suite TestSuite
     Test.SAT
     Test.SAT.Encoder
     Test.SAT.ExistentialQuantification
+    Test.SAT.MUS
     Test.SAT.TheorySolver
+    Test.SAT.Types
     Test.SAT.Utils
     Test.SDPFile
     Test.Simplex
