--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -11,7 +11,6 @@ Description:	Toy-level implementation of some decision procedures
 Homepage:	https://github.com/msakai/toysolver/
 Bug-Reports:	https://github.com/msakai/toysolver/issues
 Tested-With:
-   GHC ==7.8.4
    GHC ==7.10.3
    GHC ==8.0.1
 Extra-Source-Files:
@@ -160,7 +159,8 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      array >=0.4.0.0,
-     base >=4.7 && <5,
+     -- GHC >=7.10
+     base >=4.8 && <5,
      bytestring >=0.9.2.1 && <0.11,
      bytestring-builder,
      bytestring-encoding,
