--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ addons:
 
 matrix:
   include:
+    - env: STACK_YAML=stack-travis-ghc-8.6.yaml
+      compiler: ": #GHC 8.6.3"
     - env: STACK_YAML=stack-travis-ghc-8.4.yaml RELEASE=1 HADDOCK=1 COVERAGE=1 SHC_GHCVER=8.0.1
       compiler: ": #GHC 8.4.3"
     - env: STACK_YAML=stack-travis-ghc-8.4.yaml RELEASE=1
