--- a/stack-travis-ghc-8.6.yaml
+++ b/stack-travis-ghc-8.6.yaml
@@ -41,6 +41,10 @@ packages:
 #    git: https://github.com/msakai/opencl.git
 #    commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
 #  extra-dep: true
+- location:
+    git: https://github.com/msakai/logic-TPTP.git
+    commit: e022f015ea73d928ebcc4d3d042d13d364c4ea68
+  extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -48,7 +52,7 @@ extra-deps:
 - multiset-0.3.4.1
 - queue-0.1.2
 - OptDir-0.0.3
-- logic-TPTP-0.4.6.0
+#- logic-TPTP-0.4.6.0
 - data-interval-1.3.0
 - extended-reals-0.2.2.0
 - finite-field-0.9.0
