--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -966,6 +966,7 @@ Test-suite TestSuite
     parsec >=3.1.2 && <4,
     pseudo-boolean,
     QuickCheck >=2.5 && <3,
+    scientific,
     tasty >=0.10.1,
     tasty-hunit >=0.9 && <0.11,
     tasty-quickcheck >=0.8 && <0.11,
