--- a/stack-travis-ghc-8.0.yaml
+++ b/stack-travis-ghc-8.0.yaml
@@ -37,10 +37,6 @@ resolver: lts-9.21
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
-# - location:
-#     git: https://github.com/msakai/opencl.git
-#     commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
-#   extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -55,6 +51,8 @@ extra-deps:
 - pseudo-boolean-0.1.6.0
 - sign-0.4.3
 - OpenCL-1.0.3.4
+# - git: https://github.com/msakai/opencl.git
+#   commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
 - bytestring-encoding-0.1.0.0
 
 # hack for avoiding haddock error of MemoTrie-0.6.4
