pin stack version 1.9.3 for lts-6.35 (GHC-7.10) build to avoid error on happy
https://github.com/commercialhaskell/stack/issues/4932

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ before_install:
 - |
   if [ "$TRAVIS_OS_NAME" = "osx" ]; then
     travis_retry curl -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 -C ~/.local/bin '*/stack'
+  elif [ "$STACK_YAML" = "stack-travis-ghc-7.10.yaml" ]; then
+    travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v1.9.3/stack-1.9.3-linux-x86_64-static.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   else
     travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   fi  
