--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,6 +42,7 @@ deploy:
   artifact: /.*\.7z/
   release: $(appveyor_repo_tag_name)
   description: 'Release description'
+  draft: true
   force_update: true
   on:
     appveyor_repo_tag: true
