--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -35,6 +35,8 @@ Extra-Source-Files:
    misc/maxsat/toysat_ls/toysat_ls
    misc/pb/README.md
    misc/qbf/README.md
+   misc/smtcomp/bin/starexec_run_default
+   misc/smtcomp/starexec_description.txt
    src/ToySolver/Data/Polyhedron.hs
    src/ToySolver/SAT/MessagePassing/SurveyPropagation/sp.cl
    samples/gcnf/*.cnf
