toyfmf: require logic-TPTP version >=0.4.6.0 unconditionally

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -110,11 +110,6 @@ Flag BuildMiscPrograms
   Default: False
   Manual: True
 
-Flag LogicTPTP045
-  Description: use logic-TPTP >=0.4.5.0
-  Manual: False
-  Default: True
-
 Flag UseHaskeline
   Description: use haskeline package
   Manual: True
@@ -545,23 +540,10 @@ Executable toyfmf
       base,
       containers,
       intern,
-      -- logic-TPTP <=0.4.3 has build error on ghc <7.9 and transformers >=0.5.1.
-      -- https://github.com/DanielSchuessler/logic-TPTP/pull/4
-      logic-TPTP >=0.4.4.0,
+      logic-TPTP >=0.4.6.0 && <0.5,
       optparse-applicative,
       text,
       toysolver
-    -- logic-TPTP <=0.4.4.0 is not compatible with transformers-compat >=0.5
-    if impl(ghc <7.9)
-      if flag(LogicTPTP045)
-        Build-Depends:
-          logic-TPTP >=0.4.5.0
-      else
-        Build-Depends:
-          transformers-compat <0.5
-    -- for Semigroup (as superclass of) Monoid Proposal
-    if impl(ghc >=8.4)
-      Build-Depends: logic-TPTP >=0.4.6.0
   Default-Language: Haskell2010
   Other-Extensions: CPP
   GHC-Options: -rtsopts
