--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -951,7 +951,8 @@ Test-suite TestSuite
     OptDir,
     parsec >=3.1.2 && <4,
     pseudo-boolean,
-    QuickCheck >=2.5 && <3,
+    -- sublistOf is available on QuickCheck >=2.8
+    QuickCheck >=2.8 && <3,
     scientific,
     tasty >=0.10.1,
     tasty-hunit >=0.9 && <0.11,
