--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -174,7 +174,8 @@ Library
      extended-reals >=0.1 && <1.0,
      filepath,
      finite-field >=0.9.0 && <1.0.0,
-     hashable >=1.1.2.5 && <1.4.0.0,
+     -- hashUsing is available on hashable >=1.2
+     hashable >=1.2 && <1.4.0.0,
      hashtables,
      heaps,
      intern >=0.9.1.2 && <1.0.0.0,
@@ -428,7 +429,8 @@ Executable toysolver
     data-default-class,
     filepath,
     OptDir,
-    optparse-applicative,
+    -- maybeReader is available on optparse-applicative >=0.13.0.0
+    optparse-applicative >=0.13,
     pseudo-boolean,
     scientific,
     toysolver
@@ -457,7 +459,8 @@ Executable toysat
     filepath,
     megaparsec,
     mwc-random,
-    optparse-applicative,
+    -- maybeReader is available on optparse-applicative >=0.13.0.0
+    optparse-applicative >=0.13,
     process >=1.1.0.2,
     pseudo-boolean,
     scientific,
