--- a/stack-travis-ghc-8.8.yaml
+++ b/stack-travis-ghc-8.8.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2020-01-08
+resolver: lts-15.9
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
