--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ cache:
 environment:
   global:
     STACK_ROOT: "c:\\sr"
-    STACK_YAML: "stack-travis-ghc-8.6.yaml"
+    STACK_YAML: "stack.yaml"
 
 platform:
 - x86
