--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -16,6 +16,7 @@ Tested-With:
    GHC ==8.4.4
    GHC ==8.6.4
    GHC ==8.8.1
+   GHC ==8.10.1
 Extra-Source-Files:
    README.md
    CHANGELOG.markdown
