--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -359,6 +359,7 @@ Library
      ToySolver.FileFormat.Base
      ToySolver.FileFormat.CNF
      ToySolver.Graph.ShortestPath
+     ToySolver.Graph.IndependentSet
      ToySolver.MaxCut
      ToySolver.QBF
      ToySolver.QUBO
