:sparkles: add ToySolver.Converter.SAT2MIS

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -306,6 +306,7 @@ Library
      ToySolver.Converter.PB2SMP
      ToySolver.Converter.QBF2IPC
      ToySolver.Converter.QUBO
+     ToySolver.Converter.SAT2MIS
      ToySolver.Converter.SAT2KSAT
      ToySolver.Converter.SAT2MaxCut
      ToySolver.Converter.SAT2MaxSAT
