--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -39,7 +39,7 @@ Extra-Source-Files:
    misc/smtcomp/bin/starexec_run_default
    misc/smtcomp/starexec_description.txt
    src/ToySolver/Data/Polyhedron.hs
-   src/ToySolver/SAT/MessagePassing/SurveyPropagation/sp.cl
+   src/ToySolver/SAT/Solver/MessagePassing/SurveyPropagation/sp.cl
    samples/gcnf/*.cnf
    samples/gcnf/*.gcnf
    samples/gcnf/edn_20403_8.cnf_0.03000000.unsat.gcnf
@@ -219,7 +219,7 @@ Library
      CPP-Options: "-DWITH_ZLIB"
   if flag(OpenCL)
      Build-Depends: OpenCL >=1.0.3.4
-     Exposed-Modules: ToySolver.SAT.MessagePassing.SurveyPropagation.OpenCL
+     Exposed-Modules: ToySolver.SAT.Solver.MessagePassing.SurveyPropagation.OpenCL
   if impl(ghc)
      Build-Depends: ghc-prim
   Default-Language: Haskell2010
@@ -375,7 +375,6 @@ Library
      ToySolver.SAT.Encoder.Cardinality.Internal.Totalizer
      ToySolver.SAT.Encoder.Tseitin
      ToySolver.SAT.ExistentialQuantification
-     ToySolver.SAT.MessagePassing.SurveyPropagation
      ToySolver.SAT.MUS
      ToySolver.SAT.MUS.Enum
      ToySolver.SAT.MUS.Types
@@ -388,6 +387,7 @@ Library
      ToySolver.SAT.PBO.UnsatBased
      ToySolver.SAT.Solver.CDCL
      ToySolver.SAT.Solver.CDCL.Config
+     ToySolver.SAT.Solver.MessagePassing.SurveyPropagation
      ToySolver.SAT.Solver.SLS.ProbSAT
      ToySolver.SAT.Store.CNF
      ToySolver.SAT.Store.PB
