toysolver.cabal: fix module lists

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -938,11 +938,11 @@ Test-suite TestSuite
     Test.SMTLIB2Solver
     Test.Smtlib
     Test.SubsetSum
-    ToySolver.SMT.SMTLIB2Solver,
-    Smtlib.Parsers.CommonParsers,
-    Smtlib.Parsers.ResponseParsers,
-    Smtlib.Parsers.CommandsParsers,
-    Smtlib.Syntax.Syntax,
+    ToySolver.SMT.SMTLIB2Solver
+    Smtlib.Parsers.CommonParsers
+    Smtlib.Parsers.ResponseParsers
+    Smtlib.Parsers.CommandsParsers
+    Smtlib.Syntax.Syntax
     Smtlib.Syntax.ShowSL
   Build-depends:
     array,
