--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -978,6 +978,7 @@ Test-suite TestSuite
     vector-space
   Default-Language: Haskell2010
   Other-Extensions:
+    CPP
     DataKinds
     ScopedTypeVariables
     TemplateHaskell
