--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -1,6 +1,6 @@
 Name:		toysolver
 Version:	0.7.0
-License:	BSD3
+License:	BSD-3-Clause
 License-File:	COPYING
 Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
 Maintainer:	masahiro.sakai@gmail.com
